# rusthallfirmtest

./: Cargo.toml  Makefile  linker_script.ld  uf2conv.py
.github/workflows/: build.yml
inc/: at32f405.h  config.h  he_logic.h  stm32f4xx.h  tusb_config.h
src/: flash.c  he_logic.c  he_logic.rs  hw.c  hw.rs  main.c  main.rs  startup.c  usb_descriptors.c
